<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelgroen">


    <ImageButton
        android:id="@+id/btn_building_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_rounded"
        android:src="@drawable/icon_back"
        android:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/icon_back" />

    <TextView
        android:id="@+id/tv_building_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildingScreenBuildingScreen"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_building_back"
        app:layout_constraintEnd_toStartOf="@+id/btn_building_help"
        app:layout_constraintStart_toEndOf="@id/btn_building_back"
        app:layout_constraintTop_toTopOf="@+id/btn_building_back" />

    <ImageButton
        android:id="@+id/btn_building_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_rounded"
        android:onClick="onButtonHelpBuildingClick"
        android:src="@drawable/icon_help"
        android:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/icon_help" />

    <LinearLayout
        android:id="@+id/buildingscreen_buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_building_back">

        <Button
            android:id="@+id/btn_building_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:text="@string/buildingScreenAll"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_building_visited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:text="@string/buildingScreenVisited"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_building_unvisited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:text="@string/buildingScreenUnvisited"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_building_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildingscreen_buttonLayout"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>