<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pastelgroen">

    <ImageButton
        android:id="@+id/ib_routescreen_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_rounded"
        android:scaleType="centerInside"
        android:src="@drawable/icon_back"
        android:tint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_routescreen_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_rounded"
        android:src="@drawable/icon_help"
        android:tint="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/icon_help" />

    <TextView
        android:id="@+id/tv_routescreen_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/routeScreenTitle"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@id/ib_routescreen_back"
        app:layout_constraintRight_toLeftOf="@id/ib_routescreen_help"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>

    <LinearLayout
        android:id="@+id/routeScreen_buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ib_routescreen_back">

        <Button
            android:id="@+id/routeScreen_sortAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/routeScreenAll"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_routescreen_back" />

        <Button
            android:id="@+id/routeScreen_sortComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/routeScreenComplete"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_routescreen_back" />

        <Button
            android:id="@+id/routeScreen_sortIncomplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/routeScreenIncomplete"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_routescreen_back" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_route_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeScreen_buttonLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>